--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,4 @@
 /* Add application styles & imports to this file! */
-@import '@abgov/styles/styles.esm.css';
+
+@import "@abgov/design-tokens/dist/tokens.css";
+@import '@abgov/web-components/index.css';
